2009-08-19  Manuel Arostegui <manuel@todo-linux.com>

	* pandora_server.spec: Changed email.

2009-08-19  Sancho lerena <slerena@artica.es>

	* pandora_server.spec: Added nmap to required packages, removed xprobe2.
	
	* lib/PandoraFMS/Config.pm, conf/pandora_server.conf: New token for nmap.
	 
	* lib/PandoraFMS/ReconServer.pm: New parent detection, TCP scanning imple-
	mented using NMAP. Implemented TCP profile scanning.
	
	* lib/PandoraFMS/Tools.pm: Some reordering in pandora_get_os() gives
	more accurate OS guessing. enterprise_hook() now don't yell when enterprise
	is not found :-)

	* pandora_server.spec: Updated some dependencies. Also included the 
	install of pandora_db maintance script in cron.daily.
	
	* pandora_server, tentacle_serverd: Added short description to able
	yast visualizate correctly the description in software selection screen.
	
	* lib/PandoraFMS/Core.pm: Fixed problem with OS Detection at creation. Added
	support for AUTOTIME (time of data is given by the server instead by data
	coming from the agent) and autoimport of agent description. 

	* util/tentacle_serverd: Call to umask to let tentacle_server create
	files with mask 0007, because Enterprise version need to write files
	fetched with tentacle.

2009-08-12  sancho Lerena <slerena@artica.es>

	* pandora_server: Added LSB tags to startup daemon for SUSE

2009-08-11  Sancho Lerena <slerena@artica.es>

	* pandora_server: Using new method to get PID of process, compatible with
	any distro (SUSE problems reported). Removed old stuff and updated headers.
	
	* pandora_server_installer: A lot of improvementes and added separated code
	for Ubuntu/Debian and SUSE targets. Fixed some minor bugs reported.
	
	* bin/pandora_server: Added a new die handled for manage crashes and report
	more information into logs and console on startup. This helps to determine
	some common problems.
	
	* Config.pm: Updated version number.
	
	* util/tentacle_serverd: Fixed startup script to work also in SUSE. New