@@ -1,3 +1,8 @@
+2009-08-20  Sancho lerena <slerena@artica.es>
+
+	* lib/PandoraFMS/Tools.pm: Undone commit of 19/8 to fix ugly mesg from
+	enterprise load: was  breaking enterprise....
+
 2009-08-19  Manuel Arostegui <manuel@todo-linux.com>
 
 	* pandora_server.spec: Changed email.
